# mcvt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md
src/: batch.rs  executor.rs  main.rs  router.rs  templates.rs
src/runners/: ffmpeg.rs  imagemagick.rs  mod.rs  pandoc.rs
tests/: cli_tests.rs
