[package]
name = "mcvt"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true        

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
ctrlc = "3.5.2"
file-format = "0.29.0"
indicatif = "0.18.4"
mime_guess = "=2.0.5"
rayon = "1.12.0"
sysinfo = "0.39.3"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
